<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="100">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TableRow
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_weight="50"
                    android:text="@string/firstName"
                    android:textSize="20dp" />

                <TextView
                    android:layout_weight="50"
                    android:text="@string/lastName"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <EditText
                    android:id="@+id/fistName"
                    android:layout_weight="50"
                    android:gravity="start"
                    android:hint="@string/firstName"
                    android:textAlignment="viewStart"
                    android:background="@color/colorInput"
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_weight="50"
                    android:gravity="start"
                    android:hint="@string/lastName"
                    android:textAlignment="viewStart"
                    android:background="@color/colorInput"
                    android:padding="5dp"
                    />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TableRow
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100">

                <TextView
                    android:layout_weight="50"
                    android:text="@string/gender"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <RadioButton
                        android:id="@+id/radMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="50"
                        android:text="@string/female" />
                </RadioGroup>
            </TableRow>

        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/birthday"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:id="@+id/birthday"
                    android:layout_weight="95"
                    android:background="@color/colorInput"
                    android:padding="5dp"
                    android:textSize="20dp"
                    android:hint="@string/birthday"/>

                <Button
                    android:id="@+id/datePickerButton"
                    android:text="@string/select" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/email"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow android:weightSum="100">
                <EditText
                    android:id="@+id/email"
                    android:layout_weight="100"
                    android:hint="@string/email"
                    android:background="@color/colorInput"
                    android:padding="5dp"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/address"
                    android:textSize="20dp" />
            </TableRow>

            <TableRow android:weightSum="100">
                <EditText
                    android:id="@+id/address"
                    android:layout_weight="100"
                    android:layout_height="70dp"
                    android:hint="@string/address"
                    android:gravity="start"
                    android:background="@color/colorInput"
                    android:padding="5dp"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp" />
            </TableRow>
            <TableRow
                android:layout_height="120dp"
                android:weightSum="100"
                android:layout_marginBottom="20dp" >

                <CheckBox
                    android:layout_weight="5"
                    android:text="@string/agreement"/>

            </TableRow>
            <TableRow
                android:gravity="center"
                android:weightSum="100">

                <Button
                    android:id="@+id/submit"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textSize="20dp" />
            </TableRow>
            <TableRow
                android:gravity="center"
                android:weightSum="100">

                <TextView
                    android:id="@+id/validationNotice"
                    android:layout_weight="100"
                    android:textSize="20dp"
                    android:textColor="@color/colorAlert" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>